UPDATE : Fixed social icons z-index issue and changed title styling

--- a/style.css
+++ b/style.css
@@ -161,6 +161,8 @@ nav {
 }
 .arrow-link-holder {
   background: var(--accent-color);
+  z-index: 15;
+  position: relative;
 }
 .arrow-link {
   -webkit-transition: all 0.2s ease-in-out;
@@ -270,6 +272,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 5.5rem;
 }
 
 @media (max-width: 720px) {
@@ -306,6 +309,9 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 15;
+  position: relative;
+  background: var(--main-color-dark);
 }
 
 footer .credits small {
@@ -331,4 +337,10 @@ footer .credits small {
 .social a {
   text-decoration: none;
   color: var(--font-muted);
+}
+
+.title-border {
+  border-bottom: 2px solid var(--accent-color);
+  display: inline-block;
+  padding-bottom: 3px;
 }
